setup redux (CMS)

--- a/CMS/src/components/MenuNavi/Menu.css
+++ b/CMS/src/components/MenuNavi/Menu.css
@@ -3,12 +3,14 @@
 	display: flex;
 	justify-content: center;
 }
+
 ul {
 	list-style: none;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+
 a {
 	width: 101px;
 	height: 50px;
@@ -25,7 +27,9 @@ a {
 	margin: 0 20px;
 	text-decoration: none;
 	padding: 0 7px;
+	transition: 0.5s;
 }
+
 a:hover {
 	font-weight: bold;
 	background-color: rgb(225, 230, 235);
@@ -39,10 +43,13 @@ a:hover {
 	right: 50px;
 	top: 28px;
 }
+
 .active {
 	position: relative;
 	--color-primer-border-active: #68d29b;
 	color: black;
+	transition: 0.5s;
+
 }
 
 .active::after {
@@ -55,4 +62,6 @@ a:hover {
 	transform: translate(50%, -50%);
 	width: 100%;
 	z-index: 1;
+	transition: 0.5s;
+
 }
