--- a/CMS/src/components/FormUser/FormUser.css
+++ b/CMS/src/components/FormUser/FormUser.css
@@ -1,4 +1,4 @@
-.formProduct {
+.formUser {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,10 +13,14 @@
 
 .formContainer {
     width: 1000px;
-    min-height: 700px;
+    min-height: 200px;
     background-color: white;
     padding-bottom: 20px;
     border-radius: 5px;
+}
+
+.formContainer h1 {
+    margin-top: 20px;
 }
 
 .formContainerTop {
