--- a/CMS/src/components/FormProduct/FormProduct.css
+++ b/CMS/src/components/FormProduct/FormProduct.css
@@ -1,132 +1,131 @@
 .formProduct {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.21);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.21);
 }
 
 .formContainer {
-    width: 1000px;
-    min-height: 700px;
-    background-color: white;
-    padding-bottom: 20px;
-    border-radius: 5px;
+	width: 1000px;
+	height: 90%;
+	overflow-y: scroll;
+	background-color: white;
+	padding-bottom: 20px;
+	border-radius: 5px;
 }
 
 .formContainerTop {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+	padding-top: 20px;
+	display: flex;
+	justify-content: center;
 }
 
 .inputImageContainer {
-    height: 154px;
-    width: 145px;
-    background-color: #EAEAEA;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 5px;
-    overflow: hidden;
-
+	height: 154px;
+	width: 145px;
+	background-color: #eaeaea;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 .inputImage {
-    height: 90px;
-    width: 100px;
-    position: relative;
+	height: 90px;
+	width: 100px;
+	position: relative;
 }
 
-
 .inputImage .imagePreview {
-    height: 154px;
-    width: 145px;
-    position: absolute;
-    left: -21px;
-    top: -31px;
+	height: 154px;
+	width: 145px;
+	position: absolute;
+	left: -21px;
+	top: -31px;
 }
 
 .inputImage img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 /* bottom */
 
 .formContainerCenter {
-    padding-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+	padding-top: 50px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .formInput {
-    width: 50%;
+	width: 50%;
 }
 
 .formInput input {
-    margin-bottom: 20px;
-    border-radius: 5px;
-    padding-left: 20px;
-    width: 400px;
-    height: 50px;
-    border: none;
-    background-color: #EAEAEA;
-    color: #5A616C;
-    text-transform: capitalize;
-    font-weight: bold;
-    outline: none;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	padding-left: 20px;
+	width: 400px;
+	height: 50px;
+	border: none;
+	background-color: #eaeaea;
+	color: #5a616c;
+	text-transform: capitalize;
+	font-weight: bold;
+	outline: none;
 }
 
 .inputDesc {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .inputDesc input {
-    width: 900px;
-    padding: 20px 0 20px 20px;
+	width: 900px;
+	padding: 20px 0 20px 20px;
 }
 
 /* Button */
 
 .formContainerButton {
-    margin-top: 50px;
-    width: 100%;
-    display: flex;
-    justify-content: end;
+	margin-top: 50px;
+	width: 100%;
+	display: flex;
+	justify-content: end;
 }
 
 .btn {
-    margin-right: 40px;
-    width: 100px;
-    height: 30px;
-    border: none;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: 0.3s;
-    font-weight: bold;
+	margin-right: 40px;
+	width: 100px;
+	height: 30px;
+	border: none;
+	color: white;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: 0.3s;
+	font-weight: bold;
 }
 
 .btn:hover {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 .btnClose {
-    background-color: #d9d9d9;
-    color: #5A616C;
+	background-color: #d9d9d9;
+	color: #5a616c;
 }
 
 .btnSave {
-    background-color: #28523c;
+	background-color: #28523c;
 }
