--- a/CMS/src/components/FormSearchUser/FormSearch.css
+++ b/CMS/src/components/FormSearchUser/FormSearch.css
@@ -29,6 +29,9 @@ button {
 	transform: translateY(-50%);
 	right: 0px;
 	margin: 0;
-	color: black;
+	color: rgba(0, 0, 0, 0.552);
 	background-color: #eaeaea;
+}
+.search-icon {
+	color: rgba(0, 0, 0, 0.552);
 }
