--- a/CMS/src/components/FormSearchUser/FormSearch.css
+++ b/CMS/src/components/FormSearchUser/FormSearch.css
@@ -3,18 +3,44 @@
 	padding: 0;
 }
 
-* {
-	margin: 0;
-	padding: 0;
-}
 .actionBar {
 	width: 80%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: flex-end;
 }
-.actionBar .searchWrapper input,
-.actionBar .searchWrapper .searchBtn {
+
+.actionBar .actionWrapper {
+	width: 50%;
+	display: flex;
+	align-items: center;
+}
+
+.actionBar .actionWrapper .NewProductBtn {
+	padding: 11px 10px;
+	background-color: #036541;
+	color: white;
+	border: none;
+	border-radius: 7px;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 14px;
+	margin-right: 20px;
+}
+
+.actionBar .actionWrapper .filterWrapper {
+	padding: 10px 10px;
+	border: solid 1px #eaeaea;
+	background-color: #eaeaea;
+	border-radius: 7px;
+	color: #9b9fa5;
+	font-weight: bold;
+	font-size: 14px;
+	margin-right: 20px;
+}
+
+.actionBar .actionWrapper .searchWrapper input,
+.actionBar .actionWrapper .searchWrapper .searchBtn {
 	padding: 12px 10px;
 	background-color: #eaeaea;
 	border: none;
@@ -24,12 +50,12 @@
 	outline: none;
 }
 
-.actionBar .searchWrapper input {
+.actionBar .actionWrapper .searchWrapper input {
 	border-top-left-radius: 7px;
 	border-bottom-left-radius: 7px;
 }
 
-.actionBar .searchWrapper .searchBtn {
+.actionBar .actionWrapper .searchWrapper .searchBtn {
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
