--- a/CMS/src/components/ActionBar/ActionBar.module.css
+++ b/CMS/src/components/ActionBar/ActionBar.module.css
@@ -4,7 +4,7 @@
 }
 
 .actionBar {
-	width: 80%;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: flex-end;
@@ -14,6 +14,7 @@
 	width: 50%;
 	display: flex;
 	align-items: center;
+	justify-content: flex-end;
 }
 
 .actionBar .actionWrapper .NewProductBtn {
