--- a/CMS/src/components/FormProduct/FormProduct.css
+++ b/CMS/src/components/FormProduct/FormProduct.css
@@ -71,6 +71,12 @@
 	width: 50%;
 }
 
+.formInput .labelInput {
+	text-align: left;
+	padding-left: 11%;
+	font-size: 16px;
+}
+
 .formInput input {
 	margin-bottom: 20px;
 	border-radius: 5px;
@@ -88,7 +94,13 @@
 .inputDesc {
 	width: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+}
+
+.inputDesc .labelInput {
+	width: 100%;
 }
 
 .inputDesc input {
