--- a/CMS/src/components/ActionBar/ActionBar.module.css
+++ b/CMS/src/components/ActionBar/ActionBar.module.css
@@ -92,3 +92,18 @@
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
+.actionIcon {
+	display: flex;
+	margin-bottom: 40px;
+	width: 30vw;
+	border-bottom: 2px solid black;
+}
+.imgIcon img {
+	height: 40px;
+	width: 40px;
+}
+.nameIcon {
+	font-size: 30px;
+	font-weight: 700;
+	padding-left: 15px;
+}
