create employee table component

--- a/CMS/src/components/EmployeeTable/EmployeeTable.css
+++ b/CMS/src/components/EmployeeTable/EmployeeTable.css
@@ -8,7 +8,7 @@
 	overflow-x: auto;
 }
 
-.orderTable {
+.employeeTable {
 	border-collapse: collapse;
 	width: 100%;
 	min-width: 1000px;
@@ -16,24 +16,24 @@
 	margin-bottom: 40px;
 }
 
-.orderTable th,
-.orderTable td {
+.employeeTable th,
+.employeeTable td {
 	border: 1px solid #ccc;
-	padding: 8px;
+	padding: 5px;
 }
 
-.orderTable th {
+.employeeTable th {
 	background-color: #4e4e4e;
 	color: white;
 }
 
-.orderTable td > .btnForm {
+.employeeTable td > .btnArea {
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
 }
 
-.orderTable td > .btnForm .btn {
+.employeeTable td > .btnArea .btn {
 	color: black;
 	border: 1px solid black;
 	margin: 0;
