--- a/CMS/src/components/ProductTable/ProductTable.module.css
+++ b/CMS/src/components/ProductTable/ProductTable.module.css
@@ -56,4 +56,9 @@
 	border: 1px solid black;
 	margin: 0;
 	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: 0.3s;
+	font-weight: bold;
 }
