--- a/CMS/src/form/FormProduct/FormProduct.module.css
+++ b/CMS/src/form/FormProduct/FormProduct.module.css
@@ -15,6 +15,7 @@
 	width: 1000px;
 	height: 90%;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	background-color: white;
 	padding-bottom: 20px;
 	border-radius: 5px;
