create top 3 best selling product pie chart

--- a/CMS/src/components/SalesReport/SalesReport.css
+++ b/CMS/src/components/SalesReport/SalesReport.css
@@ -1,5 +1,9 @@
-.SalesReport {
-    min-height: 300px;
-    background-color: bisque;
+.salesReport {
+	min-height: 500px;
+	background-color: bisque;
+	width: 100%;
+}
 
+.salesReport .barChart {
+	margin-top: 24%;
 }
