--- a/CMS/src/components/TodayReport/TodayReport.css
+++ b/CMS/src/components/TodayReport/TodayReport.css
@@ -1,5 +1,7 @@
 .TodayReport {
-    width: 100%;
-    height: 200px;
-    background-color: blue;
+	width: 100%;
+	display: flex;
+	margin-bottom: 40px;
+	flex-wrap: nowrap;
+	justify-content: space-between;
 }
