--- a/CMS/src/table/OrderTable/OrderTable.module.css
+++ b/CMS/src/table/OrderTable/OrderTable.module.css
@@ -22,6 +22,10 @@
 	padding: 8px;
 }
 
+.orderTable td.totalPrice {
+	text-align: right;
+}
+
 .orderTable th {
 	background-color: #4e4e4e;
 	color: white;
