--- a/CMS/src/components/MenuNavi/Menu.css
+++ b/CMS/src/components/MenuNavi/Menu.css
@@ -47,6 +47,7 @@
 	height: 25px;
 	margin-top: 30px;
 	margin-left: 100px;
+	cursor: pointer;
 }
 
 .active {
@@ -67,4 +68,41 @@
 	width: 100%;
 	z-index: 1;
 	transition: 0.5s;
+}
+.login-form {
+	position: absolute;
+	top: calc(100% + 2px);
+	right: 0;
+	width: 150px;
+	padding: 10px;
+	background-color: #f2f2f2;
+	display: none;
+	opacity: 0;
+	transform: translateY(10px);
+	transition: opacity 0.3s ease, transform 0.3s ease;
+	z-index: 2;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.login-form.show {
+	display: block;
+	opacity: 1;
+	transform: translateY(0);
+}
+
+.login-form::before {
+	content: '';
+	position: absolute;
+	top: -10px;
+	right: 5px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 10px 10px 10px;
+	border-color: transparent transparent #f2f2f2 transparent;
+}
+
+.login-form a {
+	text-decoration: none;
+	color: black;
 }
