create navigation function and payment methods, pay button UI

--- a/Sales/src/components/ContainerRight/ContainerRight.module.css
+++ b/Sales/src/components/ContainerRight/ContainerRight.module.css
@@ -1,4 +1,5 @@
 .containerRight {
-    background-color: black;
     width: 20%;
+    background-color: white;
+    border-left: 1px solid black;
 }
