--- a/Sales/src/button/ButtonSmall/ButtonSmall.css
+++ b/Sales/src/button/ButtonSmall/ButtonSmall.css
@@ -1,14 +1,17 @@
 .button {
-    background-color: #DFFACF;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 15px;
-    font-weight: bold;
-    color: black;
-    transition: 0.3s;
-    cursor: pointer;
+	background-color: #dffacf;
+	padding: 10px 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px;
+	font-size: 15px;
+	font-weight: bold;
+	color: black;
+	transition: 0.3s;
+	cursor: pointer;
 }
 
 .button:hover {
-    opacity: 0.5;
+	opacity: 0.5;
 }
