--- a/Sales/src/components/PreOrderTable/PreOrderTable.module.css
+++ b/Sales/src/components/PreOrderTable/PreOrderTable.module.css
@@ -5,9 +5,12 @@
 }
 
 .tableWrapper {
-	width: 100%;
-	padding: 20px;
-	overflow-x: auto;
+	width: 97%;
+	height: 75%;
+	border: solid 1px #000000;
+	margin: 20px;
+	padding: 10px;
+	overflow: auto;
 }
 
 .preOrderTable {
