--- a/CMS/src/components/MenuNavi/Menu.css
+++ b/CMS/src/components/MenuNavi/Menu.css
@@ -42,11 +42,11 @@
 	border-radius: 15px;
 }
 
-.menu .menu-icon {
+.menu .menuIcon {
 	width: 25px;
 	height: 25px;
 	margin-top: 30px;
-	margin-left: 100px;
+	margin-left: 20px;
 	cursor: pointer;
 }
 
@@ -69,7 +69,7 @@
 	z-index: 1;
 	transition: 0.5s;
 }
-.login-form {
+.loginForm {
 	position: absolute;
 	top: calc(100% + 2px);
 	right: 0;
@@ -84,13 +84,13 @@
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-.login-form.show {
+.loginForm.show {
 	display: block;
 	opacity: 1;
 	transform: translateY(0);
 }
 
-.login-form::before {
+.loginForm::before {
 	content: '';
 	position: absolute;
 	top: -10px;
@@ -102,7 +102,82 @@
 	border-color: transparent transparent #f2f2f2 transparent;
 }
 
-.login-form a {
+.loginForm a {
 	text-decoration: none;
 	color: black;
+}
+
+.menuForm {
+	display: flex;
+}
+
+.bellIcon svg {
+	width: 35px;
+	height: 35px;
+	margin-top: 25px;
+	cursor: pointer;
+	position: relative;
+}
+.chatBox {
+	position: absolute;
+	top: 80px;
+	left: 83.5%;
+	transform: translateX(-50%);
+	min-width: 600px;
+	min-height: 100px;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 0 1px #fff;
+	z-index: 1;
+}
+
+.chatBox h3 {
+	margin: 0 0 20px 60px;
+}
+
+.chatBox p {
+	font-weight: 700;
+	font-size: 18px;
+}
+
+.chatBox div {
+	opacity: 0.8;
+	font-size: 14px;
+	text-align: justify;
+}
+
+.arrow {
+	position: absolute;
+	top: -10px;
+	right: 10%;
+	transform: translateX(-50%);
+	width: 0;
+	height: 0;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid #ccc;
+	z-index: 1;
+}
+
+.notify:not(:last-child) {
+	margin-bottom: 50px;
+}
+
+.notificationCount {
+	position: absolute;
+	top: 15px;
+	right: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 20px;
+	height: 20px;
+	background-color: red;
+	border-radius: 50%;
+	color: white;
+	font-size: 12px;
+	font-weight: bold;
+	border: none;
 }
