create form checkin

--- a/Sales/src/button/ButtonLarge/ButtonLarge.module.css
+++ b/Sales/src/button/ButtonLarge/ButtonLarge.module.css
@@ -11,6 +11,10 @@
     height: 80%;
     margin: 0 auto;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .button:hover {
