--- a/Sales/src/button/ButtonMedium/ButtonMedium.module.css
+++ b/Sales/src/button/ButtonMedium/ButtonMedium.module.css
@@ -1,6 +1,6 @@
 .button {
     background-color: #F0F4F6;
-    width: 240px;
+    width: 90%;
     margin: 20px auto;
     padding: 10px 20px;
     border-radius: 5px;
