--- a/Sales/src/components/PriceTotal/PriceTotal.css
+++ b/Sales/src/components/PriceTotal/PriceTotal.css
@@ -10,6 +10,7 @@
 	max-width: 100%;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	padding: 0 20px;
 }
 
 .totalForm {
@@ -24,7 +25,7 @@
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 10px;
-	width: 350px;
+	width: 400px;
 }
 
 .inputTotal label {
@@ -37,6 +38,9 @@
 .inputTotal input {
 	padding: 15px;
 	border: 2px solid black;
+	font-weight: 1000;
+	font-size: 16px;
+	text-align: end;
 }
 
 .totalForm p {
@@ -47,6 +51,9 @@
 }
 
 .totalForm input {
-	padding: 20px 15px;
+	padding: 20px 0;
 	border: 2px solid black;
+	font-weight: 1000;
+	font-size: 16px;
+	text-align: center;
 }
