--- a/CMS/src/form/FormProduct/FormProduct.module.css
+++ b/CMS/src/form/FormProduct/FormProduct.module.css
@@ -102,6 +102,29 @@
 	cursor: pointer;
 }
 
+.formInput .categoryDropdown {
+	border-radius: 5px;
+	width: 400px;
+	height: 50px;
+	background-color: #eaeaea;
+	color: #5a616c;
+	cursor: pointer;
+	text-transform: capitalize;
+	font-weight: bold;
+	outline: none;
+	border: none;
+	padding: 0 10px;
+}
+
+.formInput .categoryDropdownOption {
+	background-color: #eaeaea;
+	color: #5a616c;
+	width: 100%;
+	height: 50px;
+	font-size: 16px;
+	cursor: pointer;
+}
+
 .formInput input {
 	margin-bottom: 20px;
 	border-radius: 5px;
