--- a/CMS/src/table/CashierWorkSheetTable/CashierWorkSheetTable.module.css
+++ b/CMS/src/table/CashierWorkSheetTable/CashierWorkSheetTable.module.css
@@ -23,6 +23,7 @@
 	padding: 8px;
 	text-align: center;
 }
+
 .cell {
 	padding: 12px;
 	border: 1px solid #e2e2e2;
@@ -39,6 +40,19 @@
 	font-weight: 700;
 	background-color: #036541;
 }
+
 .cellContent:not(:last-child) {
 	margin-bottom: 10px;
+}
+
+.worksheetEmployee {
+	background-color: #036541;
+	font-size: 15px;
+	font-weight: bold;
+	margin-bottom: 20px;
+	min-height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50px;
 }
