--- a/CMS/src/table/GuardWorkSheetTable/GuardWorkSheetTable.module.css
+++ b/CMS/src/table/GuardWorkSheetTable/GuardWorkSheetTable.module.css
@@ -50,9 +50,10 @@
 	font-size: 15px;
 	font-weight: bold;
 	margin-bottom: 20px;
-	min-height: 30px;
+	height: 40px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border-radius: 50px;
+	padding: 0 5px;
 }
