--- a/Terminal/src/components/HeaderRight/HeaderRight.css
+++ b/Terminal/src/components/HeaderRight/HeaderRight.css
@@ -53,7 +53,7 @@
 }
 
 .notify:not(:last-child) {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
 
 .notificationCount {
@@ -71,4 +71,11 @@
 	font-size: 12px;
 	font-weight: bold;
 	border: none;
+}
+.notify {
+	cursor: pointer;
+}
+
+.notify:hover {
+	color: #036541;
 }
