--- a/CMS/src/table/ProductTable/ProductTable.module.css
+++ b/CMS/src/table/ProductTable/ProductTable.module.css
@@ -22,9 +22,25 @@
 	padding: 5px;
 }
 
+.productTable td .status {
+	color: white;
+	text-align: center;
+	width: 70%;
+	margin: 0 auto;
+	padding: 10px;
+	text-transform: capitalize;
+	border-radius: 12px;
+	font-weight: bold;
+	font-size: 12px;
+}
+
 .productTable th {
 	background-color: #4e4e4e;
 	color: white;
+}
+
+.productTable td {
+	text-align: center;
 }
 
 .productTable td > .imageWrapper {
@@ -42,10 +58,20 @@
 	object-fit: cover;
 }
 
+.productTable td.productName {
+	text-align: center;
+}
+
+.productTable td.productPrice {
+	text-align: right;
+	padding-right: 20px;
+}
+
 .productTable td > .productDescription {
 	width: 100%;
 	max-width: 200px;
 	text-align: left;
+	padding-left: 10px;
 }
 
 .productTable td > .btnArea {
