--- a/Terminal/src/form/FormBill/FormBill.module.css
+++ b/Terminal/src/form/FormBill/FormBill.module.css
@@ -14,8 +14,8 @@
 }
 
 .formContainer {
-	transform: translateY(30%);
-	width: 1000px;
+	transform: translateY(10%);
+	width: 60%;
 	max-height: 600px;
 	background-color: white;
 	padding: 20px;
