--- a/Terminal/src/form/FormLeave/FormLeave.module.css
+++ b/Terminal/src/form/FormLeave/FormLeave.module.css
@@ -23,7 +23,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 60px;
+	margin-top: 30px;
+}
+
+.formTitle img {
+	height: 60px;
+	width: 60px;
 }
 
 .formTitle h1 {
@@ -51,7 +56,6 @@
 	text-align: center;
 	flex-direction: column;
 	margin-top: 60px;
-	width: 1500px;
 }
 
 .formCenter {
@@ -69,6 +73,8 @@
 
 .labelInput {
 	margin-bottom: 5px;
+	width: 120px;
+	font-size: 18px;
 }
 
 .formInput {
@@ -86,10 +92,14 @@
 .formInputReason {
 	display: flex;
 	justify-content: center;
-	width: 1470px;
 }
 .labelInputReason {
-	margin-right: 75px;
+	width: 120px;
+	text-align: start;
+	font-size: 18px;
+}
+.inputReason {
+	margin-left: 16px;
 }
 .inputReason input {
 	padding: 10px 700px 140px 10px;
@@ -106,6 +116,12 @@ input {
 .buttonSendWrap {
 	display: flex;
 	justify-content: end;
-	max-width: 1200px;
-	margin-top: 70px;
+	max-width: 85%;
+	margin-top: 30px;
+}
+.buttonCancelWrap {
+	width: 95%;
+	display: flex;
+	justify-content: end;
+	margin-top: 50px;
 }
