--- a/Terminal/src/form/FormWorksheet/FormWorksheet.module.css
+++ b/Terminal/src/form/FormWorksheet/FormWorksheet.module.css
@@ -1,4 +1,4 @@
-.formSalary {
+.formWorksheet {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.277);
@@ -19,15 +19,26 @@
 	background-color: white;
 }
 
-.formTitleSalary {
+.formTitle {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 60px;
+	margin-top: 30px;
+}
+.formTitle img {
+	height: 60px;
+	width: 40px;
 }
 
 .formTitle h1 {
 	margin-left: 30px;
+}
+
+.buttonCancelWrap {
+	width: 95%;
+	display: flex;
+	justify-content: end;
+	margin-top: 20px;
 }
 
 .buttonCancel {
@@ -38,54 +49,41 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	max-height: 55%;
-	max-width: 100%;
+	margin-top: 20px;
 }
 
 .tableContainer {
 	margin: 20px;
 	width: 80%;
 }
-.salaryTable {
+
+.worksheetTable {
 	border-collapse: collapse;
 	width: 100%;
 	height: 100%;
+	border: 1px solid black;
 }
-.rowStart {
+
+.worksheetTable th {
+	border: 1px solid #ccc;
 	padding: 8px;
+	background-color: #f2f2f2;
 	font-weight: bold;
-	border: 1px solid black;
 }
 
-.columnEnd {
-	border: 1px solid black;
+.worksheetTable td {
+	border: 1px solid #ccc;
+	padding: 18px;
+	text-align: center;
 }
 
-.column {
-	padding: 8px;
-	font-weight: bold;
-	border: 1px solid black;
+.cell {
+	padding: 40px;
 }
-.infoSalary {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+.calendar {
+	margin-bottom: 30px;
 }
-.titleTable {
-	display: flex;
-	justify-content: space-between;
-	width: 300px;
-}
-
-.titleTableEnd {
-	display: flex;
-	align-items: center;
-	justify-content: start;
-	flex-direction: column;
-}
-
-.titleTable,
-.titleTableEnd {
-	padding: 10px 0;
-	font-size: 26px;
+.calendar select {
+	font-size: 20px;
+	padding: 7px;
 }
