--- a/CMS/src/table/GuardWorkSheetTable/GuardWorkSheetTable.module.css
+++ b/CMS/src/table/GuardWorkSheetTable/GuardWorkSheetTable.module.css
@@ -56,4 +56,10 @@
 	justify-content: center;
 	border-radius: 50px;
 	padding: 0 5px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.worksheetEmployee:hover {
+	opacity: 0.6;
 }
