--- a/CMS/src/form/FormWorksheet/FormWorksheet.module.css
+++ b/CMS/src/form/FormWorksheet/FormWorksheet.module.css
@@ -54,6 +54,7 @@
 	height: 30px;
 	border: none;
 	color: white;
+	background-color: #5a616c;
 	cursor: pointer;
 	border-radius: 5px;
 	transition: 0.3s;
