--- a/Terminal/src/button/ButtonStand/ButtonStand.module.css
+++ b/Terminal/src/button/ButtonStand/ButtonStand.module.css
@@ -1,30 +1,34 @@
 .button {
-    background-color: #F0F4F6;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 15px;
-    font-weight: bold;
-    color: black;
-    transition: 0.3s;
-    cursor: pointer;
-    height: 200%;
-    width: 35%;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
+	background-color: #f0f4f6;
+	padding: 10px 20px;
+	border-radius: 5px;
+	font-size: 15px;
+	font-weight: bold;
+	color: black;
+	transition: 0.3s;
+	cursor: pointer;
+	height: 200%;
+	width: 35%;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border: 2px solid black;
 }
 
 .button:hover {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 .button img {
-    height: 90px;
+	height: 90px;
 }
 
 .button h3 {
-    margin: 0;
+	margin: 0;
+}
+
+.button.active {
+	border-color: #007bff;
 }
