update css for status in table of product, employee, leaveform and fix react tooltip

--- a/CMS/src/table/LeaveTable/LeaveTable.module.css
+++ b/CMS/src/table/LeaveTable/LeaveTable.module.css
@@ -60,6 +60,9 @@
 	margin: 0 auto;
 	border-radius: 12px;
 	text-align: center;
+	font-weight: bold;
+	font-size: 12px;
 	padding: 10px;
+	min-width: fit-content;
 	color: white;
 }
