modify css for product name column of product table

--- a/CMS/src/table/ProductTable/ProductTable.module.css
+++ b/CMS/src/table/ProductTable/ProductTable.module.css
@@ -60,7 +60,9 @@
 }
 
 .productTable td.productName {
-	text-align: center;
+	text-align: left;
+	padding: 10px;
+	max-width: 200px;
 }
 
 .productTable td.productPrice {
