--- a/CMS/src/table/PayRollTable/PayRollTable.module.css
+++ b/CMS/src/table/PayRollTable/PayRollTable.module.css
@@ -42,3 +42,20 @@
 .btnForm {
 	text-align: center;
 }
+
+.dropdown input {
+	border: none;
+}
+.header {
+	position: relative;
+	display: flex;
+	justify-content: end;
+	margin-bottom: 80px;
+}
+.dropdown {
+	position: absolute;
+	top: 100%;
+	left: 70%;
+	width: 100%;
+	z-index: 10;
+}
