--- a/CMS/src/table/PayRollTable/PayRollTable.module.css
+++ b/CMS/src/table/PayRollTable/PayRollTable.module.css
@@ -4,7 +4,7 @@
 }
 
 .tableWrapper {
-	width: 80%;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -47,15 +47,14 @@
 	border: none;
 }
 .header {
+	width: 100%;
+	height: 50px;
 	position: relative;
-	display: flex;
-	justify-content: end;
-	margin-bottom: 80px;
 }
 .dropdown {
 	position: absolute;
-	top: 100%;
-	left: 70%;
+	top: 0;
+	right: 0;
 	width: 100%;
-	z-index: 10;
+	z-index: 1;
 }
