--- a/Terminal/src/form/FormLeave/FormLeave.module.css
+++ b/Terminal/src/form/FormLeave/FormLeave.module.css
@@ -14,8 +14,9 @@
 }
 
 .formContainer {
+	position: relative;
 	width: 80%;
-	height: 90%;
+	max-height: 100%;
 	background-color: white;
 }
 
@@ -34,9 +35,9 @@
 .formTitle h1 {
 	margin-left: 30px;
 }
-
 .buttonCancel {
 	width: 10%;
+	margin-bottom: 30px;
 }
 
 .tableForm {
@@ -67,8 +68,8 @@
 .formRow {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	column-gap: 250px;
-	margin-right: 50px;
+	column-gap: 30%;
+	margin-right: 26%;
 }
 
 .labelInput {
@@ -79,7 +80,7 @@
 
 .formInput {
 	display: flex;
-	width: 400px;
+	width: 100%;
 	justify-content: space-between;
 	margin-bottom: 40px;
 }
@@ -96,7 +97,6 @@
 }
 
 .labelInputReason {
-	width: 120px;
 	text-align: start;
 	font-size: 18px;
 }
@@ -107,7 +107,7 @@
 }
 .inputReason textarea {
 	padding: 10px;
-	width: 100%;
+	width: 80%;
 	height: 100%;
 }
 input {
@@ -122,7 +122,7 @@ input {
 .buttonSendWrap {
 	display: flex;
 	justify-content: end;
-	max-width: 85%;
+	max-width: 80%;
 	margin-top: 30px;
 }
 .buttonCancelWrap {
