--- a/Terminal/src/form/FormSalary/FormSalary.module.css
+++ b/Terminal/src/form/FormSalary/FormSalary.module.css
@@ -14,6 +14,7 @@
 }
 
 .formContainer {
+	position: relative;
 	width: 80%;
 	height: 90%;
 	background-color: white;
@@ -34,69 +35,41 @@
 	margin-left: 30px;
 }
 .buttonCancelWrap {
-	width: 95%;
 	display: flex;
 	justify-content: end;
 	margin-top: 40px;
 }
 .buttonCancel {
+	position: absolute;
+	bottom: 10%;
+	right: 5%;
 	width: 10%;
 }
 
-.tableForm {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	max-height: 70%;
-	max-width: 100%;
+.tableWrapper {
+	margin: 0 auto;
+	max-width: 80%;
 }
 
-.tableContainer {
-	margin: 20px;
-	width: 80%;
-}
 .salaryTable {
 	border-collapse: collapse;
-	width: 100%;
-	height: 100%;
-	margin-top: 10px;
-}
-.rowStart {
-	padding: 8px;
-	font-weight: bold;
-	border: 1px solid black;
+	width: 95%;
+	margin: 40px 0 40px 30px;
 }
 
-.columnEnd {
-	border: 1px solid black;
+.salaryTable th,
+.salaryTable td {
+	border: 1px solid #ccc;
+	padding: 15px;
+	text-align: center;
 }
 
-.column {
-	padding: 8px;
-	font-weight: bold;
-	border: 1px solid black;
+.salaryTable th {
+	background-color: #4e4e4e;
+	color: white;
 }
-.infoSalary {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-.titleTable {
-	display: flex;
-	justify-content: space-between;
-	width: 300px;
-	font-size: 18px;
-}
-
-.titleTableEnd {
-	display: flex;
-	align-items: center;
-	justify-content: start;
-	flex-direction: column;
-}
-
-.titleTable,
-.titleTableEnd {
-	padding: 10px 0;
-	font-size: 20px;
+.formContainer h2 {
+	text-align: center;
+	font-size: 25px;
+	font-weight: 700;
 }
