--- a/Terminal/src/form/FormWorksheet/FormWorksheet.module.css
+++ b/Terminal/src/form/FormWorksheet/FormWorksheet.module.css
@@ -14,8 +14,9 @@
 }
 
 .formContainer {
+	position: relative;
 	width: 80%;
-	height: 90%;
+	max-height: 90%;
 	background-color: white;
 }
 
@@ -43,9 +44,11 @@
 }
 
 .buttonCancel {
+	position: absolute;
+	bottom: 5%;
+	right: 5%;
 	width: 10%;
 }
-
 .tableForm {
 	display: flex;
 	justify-content: center;
@@ -56,30 +59,29 @@
 .tableContainer {
 	margin: 20px;
 	width: 80%;
+	max-width: 100%;
 }
 
 .worksheetTable {
 	border-collapse: collapse;
-	width: 100%;
-	height: 100%;
+	min-width: 100%;
 	border: 1px solid black;
+	margin-bottom: 100px;
 }
 
 .worksheetTable th {
 	border: 1px solid #ccc;
-	padding: 8px;
 	background-color: #f2f2f2;
 	font-weight: bold;
 }
 
 .worksheetTable td {
 	border: 1px solid #ccc;
-	padding: 18px;
 	text-align: center;
 }
 
 .cell {
-	height: 120px;
+	height: 100px;
 }
 
 .calendar {
