--- a/CMS/src/form/FormPaySlip/FormPaySlip.module.css
+++ b/CMS/src/form/FormPaySlip/FormPaySlip.module.css
@@ -24,16 +24,20 @@
 	width: 80%;
 	min-height: 85%;
 	background-color: white;
+	padding: 0 40px;
 }
 
 .tableWrapper {
 	margin: 0 auto;
-	max-width: 80%;
+	/* max-width: 80%; */
+	width: 100%;
+	overflow-x: auto;
 }
 
 .payslipTable {
 	border-collapse: collapse;
-	max-width: 100%;
+	width: 100%;
+	min-width: 1000px;
 	margin-top: 40px;
 	margin-bottom: 40px;
 }
@@ -68,8 +72,9 @@
 	display: flex;
 	justify-content: end;
 }
+
 .btn {
-	margin-right: 40px;
+	/* margin-right: 40px; */
 	width: 100px;
 	height: 30px;
 	border: none;
