--- a/Terminal/src/components/HeaderRight/HeaderRight.css
+++ b/Terminal/src/components/HeaderRight/HeaderRight.css
@@ -14,8 +14,10 @@
 	position: absolute;
 	top: 100px;
 	transform: translateX(-50%);
-	min-width: 600px;
+	min-width: 400px;
 	min-height: 100px;
+	max-height: 300px;
+	overflow-y: auto;
 	background-color: #fff;
 	border: 1px solid #ccc;
 	padding: 20px;
@@ -25,7 +27,7 @@
 }
 
 .chatBox h3 {
-	margin: 0 0 20px 60px;
+	margin: 0 0 20px 0;
 }
 
 .chatBox p {
