--- a/CMS/src/components/HeaderWorksheet/HeaderWorksheet.module.css
+++ b/CMS/src/components/HeaderWorksheet/HeaderWorksheet.module.css
@@ -1,7 +1,7 @@
 .btnContainer {
 	display: flex;
-	padding-left: 100px;
-	margin-bottom: 20px;
+	/* padding-left: 100px; */
+	margin-bottom: 40px;
 }
 
 .button {
