--- a/CMS/src/table/PayRollTable/PayRollTable.module.css
+++ b/CMS/src/table/PayRollTable/PayRollTable.module.css
@@ -38,6 +38,11 @@
 	border: 1px solid black;
 	margin: 0;
 	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: 0.3s;
+	font-weight: bold;
 }
 .btnForm {
 	text-align: center;
